# project-waverider

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  CROSS_CODEBASE_PROMPTS.md  Dockerfile  Makefile  README.md  SETUP.md  calculator.html  copilot-instructions.md  docker-compose.yml  pyproject.toml  requirements.txt  test_output.txt
docs/: BACKEND_CONFIG.md  COCOINDEX_PGVECTOR_MIGRATION.md  CODEBASE_REGISTRY.md  DEPLOYMENT.md
docs/superpowers/plans/: 2026-05-26-codebase-registry.md  2026-06-11-remote-repo-indexing.md
docs/superpowers/specs/: 2026-06-10-remote-repo-indexing-design.md
scripts/: _write_agents_md.py  backfill_fts.py  build_index.py  discover_repos.py  index_neo4j.py  index_stats.py  index_wave_repos.sh  list_indices.py  load_test.py  reindex_if_changed.py  seed_default_repos.py  seed_registry.py  setup.sh  setup_neo4j.py  setup_sqlite.py  test_cross_search.py  test_mcp_tools.py  test_neo4j_connection.py  token_analysis.py  uninstall.sh  validate_corpus.py  validate_search.py
src/waverider/: __init__.py  cocoindex_app.py  config.py  database.py  embeddings.py  fusion.py  github_discovery.py  indexer.py  mcp_server.py  neo4j_graph.py  repo_manager.py  test_prompt.md  treesitter_parser.py
test_results/: control1.md  test1.md
tests/: __init__.py  test_config_env.py  test_database.py  test_discover_repos.py  test_fusion.py  test_github_discovery.py  test_indexer.py  test_mcp_admin.py  test_reindex.py  test_repo_manager.py  test_seed_default_repos.py
