[build-system]
requires = ["poetry-core>=2.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "waverider"
version = "0.1.0"
description = "MCP server for building vector indices and knowledge graphs over codebases"
authors = ["Wave <dev@wave.com>"]
readme = "README.md"
license = "MIT"
keywords = ["mcp", "vector-index", "knowledge-graph", "neo4j", "sqlite"]
repository = "https://github.com/yourusername/waverider"
homepage = "https://github.com/yourusername/waverider"
packages = [{ include = "waverider", from = "src" }]

[tool.poetry.dependencies]
python = "^3.14"
pydantic = "^2.11"
pydantic-settings = "^2.10"
requests = "^2.32.3"
neo4j = "^5.28.1"
openai = "^1.72.0"
numpy = "^2.2.4"
mcp = "^1.26.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"
pytest-asyncio = "^0.26.0"
black = "^25.1.0"
isort = "^6.0.1"
ruff = "^0.11.4"
mypy = "^1.15.0"
types-requests = "^2.32.0.20250328"
pre-commit = "^4.2.0"

[tool.black]
line-length = 100
target-version = ["py314"]

[tool.isort]
profile = "black"
line_length = 100
py_version = 314
known_first_party = ["waverider"]

[tool.ruff]
line-length = 100
target-version = "py314"
lint.select = ["E", "F", "W", "I", "N", "UP"]
lint.ignore = ["E501"]
extend-exclude = ["migrations"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]

[tool.mypy]
python_version = "3.14"
strict = true
warn_unused_ignores = true
warn_redundant_casts = true
check_untyped_defs = true
follow_imports = "normal"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v"
asyncio_mode = "auto"
